--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio Anne-Claire</title>
+  <!-- favicon -->
+  <link rel="icon" type="image/png" href="IMG/Favcicon.png">
+  <!-- meta description -->
+  <meta name="description" content="Portfolio de Anne-Claire Michi, designer graphique.">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://use.typekit.net/kxo2ozt.css">
+</head>
 
+<body class="bodyguard">
+  
+<header class="header1">
+  <a href="index.html">
+      <img src="IMG/FaviconR copie.png" width="110%" alt="Icon Tigre" class="logo">
+</a>
+  <img src="IMG/pseudo.png" width="70%" alt="pseudo">
+</header>
+
+<nav class="lien">
+  <a href="Projets.html" ><h2>Projets</h2></a>
+  <a href="CV.html" ><h2>A propos</h2></a>
+  <a href="https://www.instagram.com/karotysm/?hl=fr" ><h2>Instagram</h2></a>
+</nav>
+</body>
+
+<script>
+  document.body.style.overflow = 'hidden';  // Empêche le défilement
+</script>
+
+</body>
+</html>
