--- a/PgEpo.html
+++ b/PgEpo.html
@@ -81,17 +81,17 @@
       
 
       <div class="rightC">
-        <img src="DEpo/P0.jpg" alt="Couverture Magazine" class="mag"> 
-        <img src="DEpo/P1.jpg" alt="Sommaire" class="mag">
-        <img src="DEpo/P2.jpg" alt="Pages Magazine" class="mag">
-        <img src="DEpo/P3.jpg" alt="Pages Magazine" class="mag">
-        <img src="DEpo/P4.jpg" alt="Pages Magazine" class="mag">
-        <img src="DEpo/P5.jpg" alt="Pages Magazine class="mag">
-        <img src="DEpo/P6.jpg" alt="Pages Magazine" class="mag">
-        <img src="DEpo/P7.jpg" alt="Pages Magazine" class="mag">
-        <img src="DEpo/P8.jpg" alt="Pages Magazine" class="mag">
-        <img src="DEpo/P9.jpg" alt="Pages Magazine" class="mag">
-        <img src="DEpo/P10.jpg" alt="Pages Magazine" class="mag">
+        <img src="DEpo/P0.png" alt="Couverture Magazine" class="mag"> 
+        <img src="DEpo/P1.png" alt="Sommaire" class="mag">
+        <img src="DEpo/P2.png" alt="Pages Magazine" class="mag">
+        <img src="DEpo/P3.png" alt="Pages Magazine" class="mag">
+        <img src="DEpo/P4.png" alt="Pages Magazine" class="mag">
+        <img src="DEpo/P5.png" alt="Pages Magazine class="mag">
+        <img src="DEpo/P6.png" alt="Pages Magazine" class="mag">
+        <img src="DEpo/P7.png" alt="Pages Magazine" class="mag">
+        <img src="DEpo/P8.png" alt="Pages Magazine" class="mag">
+        <img src="DEpo/P9.png" alt="Pages Magazine" class="mag">
+        <img src="DEpo/P10.png" alt="Pages Magazine" class="mag">
 
       </div>
 
