--- a/Ang_PgAP.html
+++ b/Ang_PgAP.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="Eng">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +7,7 @@
   <!-- favicon -->
   <link rel="icon" type="image/png" href="IMG/Favcicon.png">
   <!-- meta description -->
-  <meta name="description" content="Portfolio de Anne-Claire Michi, designer graphique.,Page projet, Art Press">
+  <meta name="description" content="Portfolio de Anne-Claire Michi, designer graphique.,Page Art Press">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://use.typekit.net/kxo2ozt.css">
 </head>
@@ -17,14 +17,14 @@
     <header class="header">
         <!-- https://jenseign.com/le-h1-logo/ -->
         <div class="headerL">
-            <a href="index.html"><img src="IMG/FaviconR copie.png" width="150px" alt="Icon Tigre" class="logoG"></a>
+            <a href="Ang_index.html"><img src="IMG/FaviconR copie.png" width="150px" alt="Icon Tigre" class="logoG"></a>
             <img  src="IMG/pseudo.png" alt="Pseudo" width="250px" >
         </div>
         <div class="headerR">
-           <a href="Projets.html" >Projets</a>
-           <a href="CV.html" >A propos</a>
+           <a href="Ang_Projets.html" >Projects</a>
+           <a href="Ang_CV.html" >About me</a>
            <a href="https://www.instagram.com/karotysm/?hl=fr" >Instagram</a>
-           <a href="Ang_PgAP.html" >Eng</a>
+           <a href="PgAP.html" >Fr</a>
         </div>
        
       </header>
@@ -66,12 +66,12 @@
 <div class="all">
 
     <div class="leftC">
-        <h2 class="h2in">Projet</h2>
+        <h2 class="h2in">Project</h2>
             <h3>Art Press</h3>
-            <p> Un fanzine composé d’une série de collage réalisés sous trois jours. Le catalogue d’images utilisées a été extrait de différents magazines d’art.
+            <p> A fanzine composed of a series of collages made in three days. The catalog of images used was taken from different art magazines.
 
               <h2 class="h2in">Description</h2>
-              <p>Fanzine de format A5 (fermé)</p>           
+              <p>Fanzine in A5 format (closed)</p>           
     
           <h2 class="h2in">Date</h2>
           <p>2022</p>
