--- a/Ang_PgEAP.html
+++ b/Ang_PgEAP.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="Eng">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Page Edgar Allan Poe</title>
+  <title>Page Edagar Allan Poe</title>
   <!-- favicon -->
   <link rel="icon" type="image/png" href="IMG/Favcicon.png">
   <!-- meta description -->
-  <meta name="description" content="Portfolio de Anne-Claire Michi, designer graphique.,Page projet, Coffret sur Edgar Allan Poe">
+  <meta name="description" content="Portfolio de Anne-Claire Michi, designer graphique.,Page Edgar Allan Poe">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://use.typekit.net/kxo2ozt.css">
 </head>
@@ -17,14 +17,14 @@
     <header class="header">
         <!-- https://jenseign.com/le-h1-logo/ -->
         <div class="headerL">
-            <a href="index.html"><img src="IMG/FaviconR copie.png" width="150px" alt="Icon Tigre" class="logoG"></a>
+            <a href="Ang_index.html"><img src="IMG/FaviconR copie.png" width="150px" alt="Icon Tigre" class="logoG"></a>
             <img  src="IMG/pseudo.png" alt="Pseudo" width="250px" >
         </div>
         <div class="headerR">
-           <a href="Projets.html" >Projets</a>
-           <a href="CV.html" >A propos</a>
+           <a href="Ang_Projets.html" >Projects</a>
+           <a href="Ang_CV.html" >About me</a>
            <a href="https://www.instagram.com/karotysm/?hl=fr" >Instagram</a>
-           <a href="Ang_PgEAP.html" >Eng</a>
+           <a href="PgEAP.html" >Fr</a>
         </div>
        
       </header>
@@ -66,19 +66,19 @@
 <div class="all">
 
     <div class="leftC">
-        <h2 class="h2in">Projet</h2>
-        <h3>Coffret d‘artiste sur Edgar Allan Poe</h3>
-        <p> Projet visant à mettre en avant l‘œuvre de l‘écrivain américain Edgar Allan Poe et à étoffer son image auprès du grand public qui le connaît seulement comme un écrivain morbide et étrange. Les différents objets graphiques qui composent ce coffret, allant de l‘édition à la linogravure, en passant par la création typographique, permettent une première approche de sa bibliographie et montrent l‘étendue de son influence sur notre culture. </p>
+        <h2 class="h2in">Project</h2>
+        <h3>Artist box on Edgar Allan Poe</h3>
+        <p>Project to promote the work of the American writer Edgar Allan Poe and to expand his image with the general public who knows him only as a morbid and strange writer. The different objects in this box, ranging from publishing to linocut, through typographical creation, allow a first approach to his bibliography and show the extent of his influence on our culture. </p>
 
       <h2 class="h2in">Description</h2>
-      <p>Par ordre d‘apparition:</p>
+      <p>In order of appearance:</p>
       <ul>
-        <li>Poster de présentation du coffret, format 60x80 cm</li>
-        <li>Un ensemble de trois posters typographiques, format 35x50 cm, reprenant des citations d‘Edgar Allan Poe ainsi que l‘abécédaire typographique créer pour ce projet</li>
-        <li>Leporello illustrée du poème "The Raven", 19x17 cm (fermé), 12 pages <br> Illustrations réalisées sur Clip Studio Pro</li>
-        <li>Catalogue d‘œuvres influencées par Edgar Allan Poe, format A4 (fermé), 54 pages</li>
-        <li>Marque-pages en linogravure, 15x6 cm</li>
-        <li>Dépliant sur la méthode cryptographique d‘Edgar Allan Poe, format 12x12 cm (fermé), 24x48cm</li>
+        <li>Poster of the box, size 60x80 cm</li>
+        <li>A set of three typographic posters, size 35x50 cm, containing quotes from Edgar Allan Poe, and the typographical alphabet created for this project</li>
+        <li>Leporello illustrating the poem "The Raven", 19x17 cm (closed), 12 pages <br> Illustrations realised on Clip Studio Pro</li>
+        <li>Catalogue of works influenced by Edgar Allan Poe, A4 format (closed), 54 pages</li>
+        <li>Bookmarks en linogravure, 15x6 cm</li>
+        <li>Brochure on the cryptographic method of Edgar Allan Poe, format 12x12 cm (closed), 24x48cm</li>
 
 
       <h2 class="h2in">Date</h2>
