--- a/Ang_PgLivre.html
+++ b/Ang_PgLivre.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="Eng">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Page Couvertures de livres</title>
+  <title>Page Collection</title>
   <!-- favicon -->
   <link rel="icon" type="image/png" href="IMG/Favcicon.png">
   <!-- meta description -->
-  <meta name="description" content="Portfolio de Anne-Claire Michi, designer graphique.,Page projet, Couvertures">
+  <meta name="description" content="Portfolio de Anne-Claire Michi, designer graphique.,Page Couverture">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://use.typekit.net/kxo2ozt.css">
 </head>
@@ -17,14 +17,14 @@
     <header class="header">
         <!-- https://jenseign.com/le-h1-logo/ -->
         <div class="headerL">
-            <a href="index.html"><img src="IMG/FaviconR copie.png" width="150px" alt="Icon Tigre" class="logoG"></a>
+            <a href="Ang_index.html"><img src="IMG/FaviconR copie.png" width="150px" alt="Icon Tigre" class="logoG"></a>
             <img  src="IMG/pseudo.png" alt="Pseudo" width="250px" >
         </div>
         <div class="headerR">
-           <a href="Projets.html" >Projets</a>
-           <a href="CV.html" >A propos</a>
+           <a href="Ang_Projets.html" >Projects</a>
+           <a href="Ang_CV.html" >About me</a>
            <a href="https://www.instagram.com/karotysm/?hl=fr" >Instagram</a>
-           <a href="Ang_PgLivre.html" >Eng</a>
+           <a href="PgLivre.html" >Fr</a>
         </div>
        
       </header>
@@ -66,17 +66,17 @@
 <div class="all">
 
     <div class="leftC">
-        <h2 class="h2in">Projet</h2>
-        <h3>Couvertures de livres</h3>
-        <p> Projet de création de trois propositions de couvertures de livres sous formes de jaquettes. Les livres traités sont “Howl‘s Moving Castle de Diana Wynne Jones, “The Pictures of Dorian Grar d‘Oscar Wilde et “1984“ de Georges Orwell.  </p>
+        <h2 class="h2in">Project</h2>
+        <h3>Book Covers</h3>
+        <p> Project to create three book cover proposals in the form of dust covers. The books covered are Howl’s Moving Castle by Diana Wynne Jones, Oscar Wilde’s The Pictures of Dorian Grar and George Orwell’s 1984.  </p>
 
 
         <h2 class="h2in">Description</h2>
-        <p>Par ordre d‘apparition:</p>
+        <p>In order of appearance:</p>
       <ul>
-        <li>Jaquette format 12,8x19,7 cm</li>
-        <li>Jaquette format 12,7x19 cm</li>
-        <li>Jaquette format 12,5x22,8 cm</li>
+        <li>Dust cover format 12,8x19,7 cm</li>
+        <li>Dust cover 12,7x19 cm</li>
+        <li>Dust cover 12,5x22,8 cm</li>
        
 
       <h2 class="h2in">Date</h2>
