--- a/PgOuro.html
+++ b/PgOuro.html
@@ -24,6 +24,7 @@
            <a href="Projets.html" >Projets</a>
            <a href="CV.html" >A propos</a>
            <a href="https://www.instagram.com/karotysm/?hl=fr" >Instagram</a>
+           <a href="Ang_PgOuro.html" >Eng</a>
         </div>
        
       </header>
@@ -66,8 +67,8 @@
 
     <div class="leftC">
         <h2 class="h2in">Projet</h2>
-        <h3>Ouroboros Specimen</h3>
-        <p>Un spécimen typographique pour le caractère Ouroboros, dessiné par Ariel Martin Pérez en 2018 avec l’aide de Helène Alix Mourrier ainsi que sa pochette. L’ensemble du projet a été créé pour ressembler à un vinyle et son enveloppe et cherche à mettre en valeur la qualité de caractère de titrage de la police.
+        <h3>Spécimen Ouroboros</h3>
+        <p>Un spécimen typographique pour le caractère Ouroboros, dessiné par Ariel Martin Pérez en 2018 avec l’aide de Helène Alix Mourrier, ainsi que sa pochette. L’ensemble du projet a été créé pour ressembler à un vinyle et son enveloppe et cherche à mettre en valeur la qualité de caractère de titrage de la police.
         </p>
        
 
