--- a/PgTypo.html
+++ b/PgTypo.html
@@ -24,6 +24,7 @@
            <a href="Projets.html" >Projets</a>
            <a href="CV.html" >A propos</a>
            <a href="https://www.instagram.com/karotysm/?hl=fr" >Instagram</a>
+           <a href="Ang_PgTypo.html" >Eng</a>
         </div>
        
       </header>
