--- a/Ang_PgEpo.html
+++ b/Ang_PgEpo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="Eng">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +7,7 @@
   <!-- favicon -->
   <link rel="icon" type="image/png" href="IMG/Favcicon.png">
   <!-- meta description -->
-  <meta name="description" content="Portfolio de Anne-Claire Michi, designer graphique.,Page projet, Revue Epologia">
+  <meta name="description" content="Portfolio de Anne-Claire Michi, designer graphique.,Page Epologia">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://use.typekit.net/kxo2ozt.css">
 </head>
@@ -17,14 +17,14 @@
     <header class="header">
         <!-- https://jenseign.com/le-h1-logo/ -->
         <div class="headerL">
-            <a href="index.html"><img src="IMG/FaviconR copie.png" width="150px" alt="Icon Tigre" class="logoG"></a>
+            <a href="Ang_index.html"><img src="IMG/FaviconR copie.png" width="150px" alt="Icon Tigre" class="logoG"></a>
             <img  src="IMG/pseudo.png" alt="Pseudo" width="250px" >
         </div>
         <div class="headerR">
-           <a href="Projets.html" >Projets</a>
-           <a href="CV.html" >A propos</a>
+           <a href="Ang_Projets.html" >Projects</a>
+           <a href="Ang_CV.html" >About me</a>
            <a href="https://www.instagram.com/karotysm/?hl=fr" >Instagram</a>
-           <a href="Ang_PgEpo.html" >Eng</a>
+           <a href="PgEpo.html" >Fr</a>
         </div>
        
       </header>
@@ -66,13 +66,13 @@
 <div class="all">
 
     <div class="leftC">
-        <h2 class="h2in">Projet</h2>
+        <h2 class="h2in">Project</h2>
         <h3>Epologia</h3>
-        <p> Le projet Epologia repose sur l’idée de créer un magazine destiné à vulgariser la science pour un large public. Afin de faciliter l’apprentissage des lecteurs et de capter leur attention, la revue mise sur l’image, dont la majorité ont été conçues spécialement pour ce projet, ainsi que sur un vocabulaire graphique prédominant, stimulant et accrocheur. <br> L’objectif est de proposer un objet que le lecteur ait envie de parcourir et de découvrir, autant pour son esthétique que pour richesse son contenu.
+        <p> The Epologia project is based on the idea of creating a magazine to disseminate science to a wide audience. To facilitate the learning of readers and capture their attention, the magazine focuses on image, most of which were designed specifically for this project, as well as a predominant graphic vocabulary, stimulating and catchy. <br> The objective is to propose an object that the reader wants to browse and discover, both for its aesthetics and for the richness of its content.
         </p>
 
       <h2 class="h2in">Description</h2>
-      <p>Revue, A4 (fermé), 47 pages</p>
+      <p>Revue, A4 (closed), 47 pages</p>
 
 
       <h2 class="h2in">Date</h2>
