--- a/Projets.html
+++ b/Projets.html
@@ -24,7 +24,7 @@
            <a href="Projets.html" >Projets</a>
            <a href="CV.html" >A propos</a>
            <a href="https://www.instagram.com/karotysm/?hl=fr" >Instagram</a>
-           <a href="Ang_Projets.html" >Fr</a>
+           <a href="Ang_Projets.html" >Eng</a>
         </div>
        
       </header>
