--- a/Ang_PgEAP.html
+++ b/Ang_PgEAP.html
@@ -133,5 +133,8 @@
               </div>
  </div>
 
+ <footer class="footer">
+  <p>Web design : &copy; Anne-Claire Michi, 2024 <br> Fonts : cofo-sans-pixel; Arial</p>
+</footer>
 </body>
 </html>
