--- a/Ang_PgEpo.html
+++ b/Ang_PgEpo.html
@@ -96,5 +96,8 @@
 
       </div>
 
+      <footer class="footer">
+        <p>Web design : &copy; Anne-Claire Michi, 2024 <br> Fonts : cofo-sans-pixel; Arial</p>
+      </footer>
     </body>
     </html>
