--- a/Ang_PgPoster.html
+++ b/Ang_PgPoster.html
@@ -132,5 +132,8 @@
             showSlide(currentIndex);
           </script>
 
+<footer class="footer">
+  <p>Web design : &copy; Anne-Claire Michi, 2024 <br> Fonts : cofo-sans-pixel; Arial</p>
+</footer>
 </body>
 </html>
