--- a/Ang_PgTypo.html
+++ b/Ang_PgTypo.html
@@ -66,7 +66,7 @@
 <div class="all">
 
     <div class="leftC">
-        <h2 class="h2in">Projet</h2>
+        <h2 class="h2in">Project</h2>
         <h3>Mark Your Words</h3>
         <p> Devlopment of an experimental font, created from two shapes taken from a highlighter.
        
@@ -101,5 +101,8 @@
       </div>
 </div>
 
+<footer class="footer">
+  <p>Web design : &copy; Anne-Claire Michi, 2024 <br> Fonts : cofo-sans-pixel; Arial</p>
+</footer>
 </body>
 </html>
