--- a/PgDISP.html
+++ b/PgDISP.html
@@ -141,6 +141,9 @@
 </div>
 
 </script>
+<footer class="footer">
+  <p>Web design : &copy; Anne-Claire Michi, 2024 <br> Polices : cofo-sans-pixel; Arial</p>
+</footer>
 
 </body>
 </html>
