--- a/PgEpo.html
+++ b/PgEpo.html
@@ -95,6 +95,9 @@
         <img src="DEpo/P10.png" alt="Pages Magazine" class="mag">
 
       </div>
+      <footer class="footer">
+        <p>Web design : &copy; Anne-Claire Michi, 2024 <br> Polices : cofo-sans-pixel; Arial</p>
+      </footer>
 
     </body>
     </html>
