--- a/PgLivre.html
+++ b/PgLivre.html
@@ -115,6 +115,9 @@
 
       </div>
 </div>
+<footer class="footer">
+  <p>Web design : &copy; Anne-Claire Michi, 2024 <br> Polices : cofo-sans-pixel; Arial</p>
+</footer>
 
 </body>
 </html>
