--- a/Ang_CV.html
+++ b/Ang_CV.html
@@ -48,7 +48,9 @@
             <img src="DCV/benw.png" alt="Ilustration déco" width="110%">
         </div>
 
-
+        <footer class="footer">
+            <p>Web design : &copy; Anne-Claire Michi, 2024 <br> Fonts : cofo-sans-pixel; Arial</p>
+          </footer>
 
     </body>
     </html>
