--- a/Ang_PgDISP.html
+++ b/Ang_PgDISP.html
@@ -142,5 +142,8 @@
 
 </script>
 
+<footer class="footer">
+  <p>Web design : &copy; Anne-Claire Michi, 2024 <br> Fonts : cofo-sans-pixel; Arial</p>
+</footer>
 </body>
 </html>
