--- a/Ang_PgOuro.html
+++ b/Ang_PgOuro.html
@@ -104,6 +104,9 @@
       </div>
 </div>
 
+<footer class="footer">
+  <p>Web design : &copy; Anne-Claire Michi, 2024 <br> Fonts : cofo-sans-pixel; Arial</p>
+</footer>
 </body>
 </html>
 
