--- a/PgAP.html
+++ b/PgAP.html
@@ -106,6 +106,8 @@
 
           </div>
     </div>
-
+    <footer class="footer">
+      <p>Web design : &copy; Anne-Claire Michi, 2024 <br> Polices : cofo-sans-pixel; Arial</p>
+    </footer>
   </body>
   </html>
