--- a/PgEAP.html
+++ b/PgEAP.html
@@ -133,5 +133,9 @@
               </div>
  </div>
 
+ <footer class="footer">
+  <p>Web design : &copy; Anne-Claire Michi, 2024 <br> Polices : cofo-sans-pixel; Arial</p>
+</footer>
+
 </body>
 </html>
