--- a/PgKorax.html
+++ b/PgKorax.html
@@ -118,6 +118,9 @@
         </div>
     </div>
 </div>
+<footer class="footer">
+  <p>Web design : &copy; Anne-Claire Michi, 2024 <br> Polices : cofo-sans-pixel; Arial</p>
+</footer>
 
 </body>
 </html>
