--- a/PgPoster.html
+++ b/PgPoster.html
@@ -131,6 +131,8 @@
           
             showSlide(currentIndex);
           </script>
-
+<footer class="footer">
+  <p>Web design : &copy; Anne-Claire Michi, 2024 <br> Polices : cofo-sans-pixel; Arial</p>
+</footer>
 </body>
 </html>
