--- a/CV.html
+++ b/CV.html
@@ -18,7 +18,7 @@
         <!-- https://jenseign.com/le-h1-logo/ -->
         <div class="headerL">
             <a href="index.html"><img src="IMG/FaviconR copie.png" width="150px" alt="Icon Tigre" class="logoG"></a>
-            <img  src="IMG/pseudo.png" alt="Pseudo" width="250px" >
+            <a href="index.html"><img  src="IMG/pseudo.png" alt="Pseudo" width="250px" ></a>
         </div>
         <div class="headerR">
            <a href="Projets.html" >Projets</a>
@@ -36,8 +36,8 @@
             <h1 class="h1CV">Anne-Claire MICHI</h1>
             <h1>À propos</h1>
          
-            <p> Étudiante française de 20 ans en deuxième année de design graphique à <a href="https://www.esad-amiens.fr/" class="LienCV" >l‘ESAD d‘Amiens</a>, j’ai passé la plus grande partie de mon adolescence en Afrique de l’Ouest (Côte d’Ivoire et Sénégal). Très ouverte aux gens et aux cultures, je suis toujours à la recherche de nouvelles expériences et de rencontres, de nouvelles façons d’apprendre et de créer. Je m’intéresse particulièrement à l’illustration et à l’édition, et j’aimerais compléter mes études par un master et me lancer dans ces deux domaines.</p>
-            <p> Besoins de plus d‘info? Voici mon <a href="DCV/CV.pdf" class="LienCV">CV</a> </p> 
+            <p> Étudiante française de 20 ans en deuxième année de design graphique à <a href="https://www.esad-amiens.fr/" class="LienCV" >l'ESAD d'Amiens</a>, j’ai passé la plus grande partie de mon adolescence en Afrique de l’Ouest (Côte d’Ivoire et Sénégal). Très ouverte aux gens et aux cultures, je suis toujours à la recherche de nouvelles expériences et de rencontres, de nouvelles façons d’apprendre et de créer. Je m’intéresse particulièrement à l’illustration et à l’édition, et j’aimerais compléter mes études par un master et me lancer dans ces deux domaines.</p>
+            <p> Besoins de plus d'info? Voici mon <a href="DCV/CV.pdf" class="LienCV">CV</a> </p> 
              <p> </p>
             <h1>Me Contacter: </h1>
             <P> Mail: anneclairemichi@gmail.com <br> Instagram et autres: @karotysm</P>
