--- a/PgEAP.html
+++ b/PgEAP.html
@@ -18,7 +18,7 @@
         <!-- https://jenseign.com/le-h1-logo/ -->
         <div class="headerL">
             <a href="index.html"><img src="IMG/FaviconR copie.png" width="150px" alt="Icon Tigre" class="logoG"></a>
-            <img  src="IMG/pseudo.png" alt="Pseudo" width="250px" >
+            <a href="index.html"><img  src="IMG/pseudo.png" alt="Pseudo" width="250px" ></a>
         </div>
         <div class="headerR">
            <a href="Projets.html" >Projets</a>
@@ -67,18 +67,18 @@
 
     <div class="leftC">
         <h2 class="h2in">Projet</h2>
-        <h3>Coffret d‘artiste sur Edgar Allan Poe</h3>
-        <p> Projet visant à mettre en avant l‘œuvre de l‘écrivain américain Edgar Allan Poe et à étoffer son image auprès du grand public qui le connaît seulement comme un écrivain morbide et étrange. Les différents objets graphiques qui composent ce coffret, allant de l‘édition à la linogravure, en passant par la création typographique, permettent une première approche de sa bibliographie et montrent l‘étendue de son influence sur notre culture. </p>
+        <h3>Coffret d'artiste sur Edgar Allan Poe</h3>
+        <p> Projet visant à mettre en avant l'œuvre de l'écrivain américain Edgar Allan Poe et à étoffer son image auprès du grand public qui le connaît seulement comme un écrivain morbide et étrange. Les différents objets graphiques qui composent ce coffret, allant de l'édition à la linogravure, en passant par la création typographique, permettent une première approche de sa bibliographie et montrent l'étendue de son influence sur notre culture. </p>
 
       <h2 class="h2in">Description</h2>
-      <p>Par ordre d‘apparition:</p>
+      <p>Par ordre d'apparition:</p>
       <ul>
         <li>Poster de présentation du coffret, format 60x80 cm</li>
-        <li>Un ensemble de trois posters typographiques, format 35x50 cm, reprenant des citations d‘Edgar Allan Poe ainsi que l‘abécédaire typographique créer pour ce projet</li>
+        <li>Un ensemble de trois posters typographiques, format 35x50 cm, reprenant des citations d'Edgar Allan Poe ainsi que l'abécédaire typographique créer pour ce projet</li>
         <li>Leporello illustrée du poème "The Raven", 19x17 cm (fermé), 12 pages <br> Illustrations réalisées sur Clip Studio Pro</li>
-        <li>Catalogue d‘œuvres influencées par Edgar Allan Poe, format A4 (fermé), 54 pages</li>
+        <li>Catalogue d'œuvres influencées par Edgar Allan Poe, format A4 (fermé), 54 pages</li>
         <li>Marque-pages en linogravure, 15x6 cm</li>
-        <li>Dépliant sur la méthode cryptographique d‘Edgar Allan Poe, format 12x12 cm (fermé), 24x48cm</li>
+        <li>Dépliant sur la méthode cryptographique d'Edgar Allan Poe, format 12x12 cm (fermé), 24x48cm</li>
 
 
       <h2 class="h2in">Date</h2>
