--- a/Ang_PgLivre.html
+++ b/Ang_PgLivre.html
@@ -18,7 +18,7 @@
         <!-- https://jenseign.com/le-h1-logo/ -->
         <div class="headerL">
             <a href="Ang_index.html"><img src="IMG/FaviconR copie.png" width="150px" alt="Icon Tigre" class="logoG"></a>
-            <img  src="IMG/pseudo.png" alt="Pseudo" width="250px" >
+            <a href="Ang_index.html"><img  src="IMG/pseudo.png" alt="Pseudo" width="250px" ></a>
         </div>
         <div class="headerR">
            <a href="Ang_Projets.html" >Projects</a>
@@ -91,7 +91,7 @@
         <img src="DCouv/Cover copie.png" alt="Proposition Couverture Howl Moving Castle" >
         <div>
         <img src="DCouv/COVER2.jpg" alt="Proposition Couverture Howl moving castle patron">
-        <p>Howl‘s Moving Castle Diana Wynne Jones</p>
+        <p>Howl's Moving Castle Diana Wynne Jones</p>
     </div>
    
        </div>
