--- a/PgKorax.html
+++ b/PgKorax.html
@@ -18,7 +18,7 @@
         <!-- https://jenseign.com/le-h1-logo/ -->
         <div class="headerL">
             <a href="index.html"><img src="IMG/FaviconR copie.png" width="150px" alt="Icon Tigre" class="logoG"></a>
-            <img  src="IMG/pseudo.png" alt="Pseudo" width="250px" >
+            <a href="index.html"><img  src="IMG/pseudo.png" alt="Pseudo" width="250px" ></a>
         </div>
         <div class="headerR">
            <a href="Projets.html" >Projets</a>
@@ -68,11 +68,11 @@
     <div class="leftC">
         <h2 class="h2in">Projet</h2>
         <h3>Collection Trypokoraxeitor</h3>
-        <p> Création d‘un catalogue de formes, extraites d‘une collection d‘objets ayant tous comme particularité d‘être plus ou moins troués.<br> Ces formes sont ensuite utilisées pour créer une série de compositions abstraites.</p>
+        <p> Création d'un catalogue de formes, extraites d'une collection d'objets ayant tous comme particularité d'être plus ou moins troués.<br> Ces formes sont ensuite utilisées pour créer une série de compositions abstraites.</p>
 
 
         <h2 class="h2in">Description</h2>
-        <p>Par ordre d‘apparition:</p>
+        <p>Par ordre d'apparition:</p>
       <ul>
         <li>Poster catalogue de formes, format 60x80 cm</li>
         <li>Série de compositions abstraites, format A2</li>
