--- a/PgLivre.html
+++ b/PgLivre.html
@@ -18,7 +18,7 @@
         <!-- https://jenseign.com/le-h1-logo/ -->
         <div class="headerL">
             <a href="index.html"><img src="IMG/FaviconR copie.png" width="150px" alt="Icon Tigre" class="logoG"></a>
-            <img  src="IMG/pseudo.png" alt="Pseudo" width="250px" >
+            <a href="index.html"><img  src="IMG/pseudo.png" alt="Pseudo" width="250px" ></a>
         </div>
         <div class="headerR">
            <a href="Projets.html" >Projets</a>
@@ -68,11 +68,11 @@
     <div class="leftC">
         <h2 class="h2in">Projet</h2>
         <h3>Couvertures de livres</h3>
-        <p> Projet de création de trois propositions de couvertures de livres sous formes de jaquettes. Les livres traités sont “Howl‘s Moving Castle de Diana Wynne Jones, “The Pictures of Dorian Grar d‘Oscar Wilde et “1984“ de Georges Orwell.  </p>
+        <p> Projet de création de trois propositions de couvertures de livres sous formes de jaquettes. Les livres traités sont “Howl's Moving Castle de Diana Wynne Jones, “The Pictures of Dorian Grar d'Oscar Wilde et “1984“ de Georges Orwell.  </p>
 
 
         <h2 class="h2in">Description</h2>
-        <p>Par ordre d‘apparition:</p>
+        <p>Par ordre d'apparition:</p>
       <ul>
         <li>Jaquette format 12,8x19,7 cm</li>
         <li>Jaquette format 12,7x19 cm</li>
@@ -91,7 +91,7 @@
         <img src="DCouv/Cover copie.png" alt="Proposition Couverture Howl Moving Castle" >
         <div>
         <img src="DCouv/COVER2.jpg" alt="Proposition Couverture Howl moving castle patron">
-        <p>Howl‘s Moving Castle Diana Wynne Jones</p>
+        <p>Howl's Moving Castle Diana Wynne Jones</p>
     </div>
    
        </div>
