--- a/PgOuro.html
+++ b/PgOuro.html
@@ -18,7 +18,7 @@
         <!-- https://jenseign.com/le-h1-logo/ -->
         <div class="headerL">
             <a href="index.html"><img src="IMG/FaviconR copie.png" width="150px" alt="Icon Tigre" class="logoG"></a>
-            <img  src="IMG/pseudo.png" alt="Pseudo" width="250px" >
+            <a href="index.html"><img  src="IMG/pseudo.png" alt="Pseudo" width="250px" ></a>
         </div>
         <div class="headerR">
            <a href="Projets.html" >Projets</a>
@@ -74,7 +74,7 @@
 
       <h2 class="h2in">Description</h2>
 
-      <p>Par ordre d‘apparition:</p>
+      <p>Par ordre d'apparition:</p>
       <ul>
         <li>Pochette format 29x29 cm. Illustration réalisée sur Clip Studio Pro</li>
         <li>Édition spécimen au format 27x27 cm (fermé), 14 pages</li>
