--- a/PgTypo.html
+++ b/PgTypo.html
@@ -18,7 +18,7 @@
         <!-- https://jenseign.com/le-h1-logo/ -->
         <div class="headerL">
             <a href="index.html"><img src="IMG/FaviconR copie.png" width="150px" alt="Icon Tigre" class="logoG"></a>
-            <img  src="IMG/pseudo.png" alt="Pseudo" width="250px" >
+            <a href="index.html"><img  src="IMG/pseudo.png" alt="Pseudo" width="250px" ></a>
         </div>
         <div class="headerR">
            <a href="Projets.html" >Projets</a>
@@ -68,7 +68,7 @@
     <div class="leftC">
         <h2 class="h2in">Projet</h2>
         <h3>Mark Your Words</h3>
-        <p> Projet de création d‘une police expérimentale, crée à partir de deux formes extraient d‘un surligneur.
+        <p> Projet de création d'une police expérimentale, crée à partir de deux formes extraient d'un surligneur.
        
 
       <h2 class="h2in">Date</h2>
