--- a/Projets.html
+++ b/Projets.html
@@ -18,7 +18,7 @@
         <!-- https://jenseign.com/le-h1-logo/ -->
         <div class="headerL">
             <a href="index.html"><img src="IMG/FaviconR copie.png" width="150px" alt="Icon Tigre" class="logoG"></a>
-            <img  src="IMG/pseudo.png" alt="Pseudo" width="250px" >
+            <a href="index.html"><img  src="IMG/pseudo.png" alt="Pseudo" width="250px" ></a>
         </div>
         <div class="headerR">
            <a href="Projets.html" >Projets</a>
@@ -38,7 +38,7 @@
           </div>
           <div class="image-container">
             <a href="PgEAP.html"><img src="DProjets/EAP.jpg" alt="Projet coffret artiste Edgar Allan Poe" class="icon"></a>
-            <div class="image-title">Coffret d‘artiste sur <br> EDGAR ALLAN POE</div>
+            <div class="image-title">Coffret d'artiste sur <br> EDGAR ALLAN POE</div>
           </div>
           <div class="image-container">
             <a href="PgKorax.html"><img src="DProjets/Poster Korax copie.png" alt="Collection TRYPOKORAXEITOR" class="icon"></a>
