--- a/Ang_CV.html
+++ b/Ang_CV.html
@@ -22,9 +22,9 @@
         </div>
         <div class="headerR">
            <a href="Ang_Projets.html" >Projects</a>
-           <a href="Ang_CV.html" >About me</a>
+           <a href="Ang_CV.html" class="blue">About me</a>
            <a href="https://www.instagram.com/karotysm/?hl=fr" >Instagram</a>
-           <a href="CV.html" >Fr</a>
+           <p><a href="CV.html" >Fr </a>/ Eng</p>
         </div>
        
       </header>
@@ -47,6 +47,7 @@
         <div class="CVright">
             <img src="DCV/benw.png" alt="Ilustration déco" width="110%">
         </div>
+      </div>
 
         <footer class="footer">
             <p>Web design : &copy; Anne-Claire Michi, 2024 <br> Fonts : cofo-sans-pixel; Arial</p>
