--- a/Ang_PgEpo.html
+++ b/Ang_PgEpo.html
@@ -24,7 +24,7 @@
            <a href="Ang_Projets.html" >Projects</a>
            <a href="Ang_CV.html" >About me</a>
            <a href="https://www.instagram.com/karotysm/?hl=fr" >Instagram</a>
-           <a href="PgEpo.html" >Fr</a>
+           <p><a href="PgEpo.html" >Fr </a>/ Eng</p>
         </div>
        
       </header>
@@ -82,19 +82,21 @@
       
 
       <div class="rightC">
-        <img src="DEpo/P0.png" alt="Couverture Magazine" class="mag"> 
-        <img src="DEpo/P1.png" alt="Sommaire" class="mag">
-        <img src="DEpo/P2.png" alt="Pages Magazine" class="mag">
-        <img src="DEpo/P3.png" alt="Pages Magazine" class="mag">
-        <img src="DEpo/P4.png" alt="Pages Magazine" class="mag">
-        <img src="DEpo/P5.png" alt="Pages Magazine" class="mag">
-        <img src="DEpo/P6.png" alt="Pages Magazine" class="mag">
-        <img src="DEpo/P7.png" alt="Pages Magazine" class="mag">
-        <img src="DEpo/P8.png" alt="Pages Magazine" class="mag">
-        <img src="DEpo/P9.png" alt="Pages Magazine" class="mag">
-        <img src="DEpo/P10.png" alt="Pages Magazine" class="mag">
+        <img src="DEpo/P0.jpg" alt="Couverture Magazine" class="mag"> 
+        <img src="DEpo/P1.jpg" alt="Sommaire" class="mag">
+        <img src="DEpo/P2.jpg" alt="Pages Magazine" class="mag">
+        <img src="DEpo/P3.jpg" alt="Pages Magazine" class="mag">
+        <img src="DEpo/P4.jpg" alt="Pages Magazine" class="mag">
+        <img src="DEpo/P5.jpg" alt="Pages Magazine" class="mag">
+        <img src="DEpo/P6.jpg" alt="Pages Magazine" class="mag">
+        <img src="DEpo/P7.jpg" alt="Pages Magazine" class="mag">
+        <img src="DEpo/P8.jpg" alt="Pages Magazine" class="mag">
+        <img src="DEpo/P9.jpg" alt="Pages Magazine" class="mag">
+        <img src="DEpo/P10.jpg" alt="Pages Magazine" class="mag">
+
 
       </div>
+    </div>
 
       <footer class="footer">
         <p>Web design : &copy; Anne-Claire Michi, 2024 <br> Fonts : cofo-sans-pixel; Arial</p>
