--- a/Ang_PgOuro.html
+++ b/Ang_PgOuro.html
@@ -24,7 +24,7 @@
            <a href="Ang_Projets.html" >Projects</a>
            <a href="Ang_CV.html" >About me</a>
            <a href="https://www.instagram.com/karotysm/?hl=fr" >Instagram</a>
-           <a href="PgOuro.html" >Fr</a>
+           <p><a href="PgOuro.html" >Fr </a>/ Eng</p>
         </div>
        
       </header>
@@ -88,7 +88,7 @@
 
       <div class="rightC">
         
-        <img src="DOuro/OUROC.png" alt="Pochette Specimen">
+        <img src="DOuro/OUROC .jpg" alt="Pochette Specimen">
 
         <img src="DOuro/SPEO1.jpg" alt="COUVERTURE du spécimen" class="OUROC">
         <div class="OURO">
