--- a/Ang_index.html
+++ b/Ang_index.html
@@ -17,10 +17,10 @@
 <header class="header1">
   <!-- Le lien de l'image sera modifié dynamiquement par JavaScript -->
   <a id="favicon-link" href="Ang_index.html">
-    <img src="IMG/FaviconR copie.png" width="110%" alt="Icon Tigre" class="logo">
+    <img src="IMG/FaviconR copie.png" width="100%" alt="Icon Tigre" class="logo">
   </a>
   
-  <img src="IMG/pseudo.png" width="70%" alt="pseudo">
+  <img src="IMG/pseudo.png" width="100%" alt="pseudo" class="pseudo">
 </header>
 
 <nav class="lien">
