--- a/CV.html
+++ b/CV.html
@@ -22,12 +22,14 @@
         </div>
         <div class="headerR">
            <a href="Projets.html" >Projets</a>
-           <a href="CV.html" >A propos</a>
+           <a href="CV.html" >À propos</a>
            <a href="https://www.instagram.com/karotysm/?hl=fr" >Instagram</a>
-           <a href="Ang_CV.html" >Eng</a>
+           <p> Fr /<a href="Ang_CV.html" > Eng</a></p>
         </div>
        
       </header>
+
+
 
     <div class="CV">
 
@@ -47,10 +49,11 @@
         <div class="CVright">
             <img src="DCV/benw.png" alt="Ilustration déco" width="110%">
         </div>
+      </div>
 
-        <footer class="footer">
-            <p>Web design : &copy; Anne-Claire Michi, 2024 <br> Polices : cofo-sans-pixel; Arial</p>
-          </footer>
+      <footer class="footer">
+        <p>Web design : &copy; Anne-Claire Michi, 2024 <br> Polices : cofo-sans-pixel; Arial</p>
+      </footer>
 
     </body>
     </html>
