--- a/PgEAP.html
+++ b/PgEAP.html
@@ -22,9 +22,9 @@
         </div>
         <div class="headerR">
            <a href="Projets.html" >Projets</a>
-           <a href="CV.html" >A propos</a>
+           <a href="CV.html" >À propos</a>
            <a href="https://www.instagram.com/karotysm/?hl=fr" >Instagram</a>
-           <a href="Ang_PgEAP.html" >Eng</a>
+           <p> Fr /<a href="Ang_PgEAP.html" > Eng</a></p>
         </div>
        
       </header>
@@ -91,7 +91,7 @@
 
         <div class="EAP">
           <p></p>
-          <img  src="DEAP/PosterEAP.png" alt="Poster Coffret Edgar Allan Poe">
+          <img  src="DEAP/PosterEAP.jpg" alt="Poster Coffret Edgar Allan Poe">
         </div>
         <p></p>
 
@@ -104,14 +104,14 @@
         </div>
 
         <div class="EAP1">
-          <img class="EAPbis" src="DEAP/Raven/Raven.png" alt="Edition the Raven illustré">
+          <img class="EAPbis" src="DEAP/Raven/Raven.jpg" alt="Edition the Raven illustré">
           <img class="EAPbis2" src="DEAP/Raven/RavenP1.jpg" alt="Page 1 The Raven illustré">
           <img class="EAPbis2" src="DEAP/Raven/RavenP3.jpg" alt="Page 3 The Raven illustré">
           <img class="EAPbis2" src="DEAP/Raven/RavenP4.jpg" alt="Page 4 The Raven illustré">
          </div>
 
          <div class="EAP2" >
-          <img class="EAPbis3" src="DEAP/Influence/REF.png" alt="Édition influence">
+          <img class="EAPbis3" src="DEAP/Influence/REF.jpg" alt="Édition influence">
           <img src="DEAP/Influence/P1 copie.jpg" alt="Page Influence Edagar Allan Poe">
           <img src="DEAP/Influence/P3 copie.jpg" alt="Page Influence Edagar Allan Poe">
           <img class="EAPbis3" src="DEAP/Influence/DSC08490.jpg" alt="Photo édition influence">
