--- a/PgEpo.html
+++ b/PgEpo.html
@@ -22,9 +22,9 @@
         </div>
         <div class="headerR">
            <a href="Projets.html" >Projets</a>
-           <a href="CV.html" >A propos</a>
+           <a href="CV.html" >À propos</a>
            <a href="https://www.instagram.com/karotysm/?hl=fr" >Instagram</a>
-           <a href="Ang_PgEpo.html" >Eng</a>
+           <p> Fr /<a href="Ang_PgEpo.html" > Eng</a></p>
         </div>
        
       </header>
@@ -82,19 +82,20 @@
       
 
       <div class="rightC">
-        <img src="DEpo/P0.png" alt="Couverture Magazine" class="mag"> 
-        <img src="DEpo/P1.png" alt="Sommaire" class="mag">
-        <img src="DEpo/P2.png" alt="Pages Magazine" class="mag">
-        <img src="DEpo/P3.png" alt="Pages Magazine" class="mag">
-        <img src="DEpo/P4.png" alt="Pages Magazine" class="mag">
-        <img src="DEpo/P5.png" alt="Pages Magazine" class="mag">
-        <img src="DEpo/P6.png" alt="Pages Magazine" class="mag">
-        <img src="DEpo/P7.png" alt="Pages Magazine" class="mag">
-        <img src="DEpo/P8.png" alt="Pages Magazine" class="mag">
-        <img src="DEpo/P9.png" alt="Pages Magazine" class="mag">
-        <img src="DEpo/P10.png" alt="Pages Magazine" class="mag">
+        <img src="DEpo/P0.jpg" alt="Couverture Magazine" class="mag"> 
+        <img src="DEpo/P1.jpg" alt="Sommaire" class="mag">
+        <img src="DEpo/P2.jpg" alt="Pages Magazine" class="mag">
+        <img src="DEpo/P3.jpg" alt="Pages Magazine" class="mag">
+        <img src="DEpo/P4.jpg" alt="Pages Magazine" class="mag">
+        <img src="DEpo/P5.jpg" alt="Pages Magazine" class="mag">
+        <img src="DEpo/P6.jpg" alt="Pages Magazine" class="mag">
+        <img src="DEpo/P7.jpg" alt="Pages Magazine" class="mag">
+        <img src="DEpo/P8.jpg" alt="Pages Magazine" class="mag">
+        <img src="DEpo/P9.jpg" alt="Pages Magazine" class="mag">
+        <img src="DEpo/P10.jpg" alt="Pages Magazine" class="mag">
 
       </div>
+    </div>
       <footer class="footer">
         <p>Web design : &copy; Anne-Claire Michi, 2024 <br> Polices : cofo-sans-pixel; Arial</p>
       </footer>
