--- a/PgOuro.html
+++ b/PgOuro.html
@@ -22,9 +22,9 @@
         </div>
         <div class="headerR">
            <a href="Projets.html" >Projets</a>
-           <a href="CV.html" >A propos</a>
+           <a href="CV.html" >À propos</a>
            <a href="https://www.instagram.com/karotysm/?hl=fr" >Instagram</a>
-           <a href="Ang_PgOuro.html" >Eng</a>
+           <p> Fr /<a href="Ang_PgOuro.html" > Eng</a></p>
         </div>
        
       </header>
@@ -88,7 +88,7 @@
 
       <div class="rightC">
         
-        <img src="DOuro/OUROC.png" alt="Pochette Specimen">
+        <img src="DOuro/OUROC .jpg" alt="Pochette Specimen">
 
         <img src="DOuro/SPEO1.jpg" alt="COUVERTURE du spécimen" class="OUROC">
         <div class="OURO">
