--- a/Projets.html
+++ b/Projets.html
@@ -21,10 +21,10 @@
             <a href="index.html"><img  src="IMG/pseudo.png" alt="Pseudo" width="250px" ></a>
         </div>
         <div class="headerR">
-           <a href="Projets.html" >Projets</a>
-           <a href="CV.html" >A propos</a>
+           <a href="Projets.html" class="blue">Projets</a>
+           <a href="CV.html" >À propos</a>
            <a href="https://www.instagram.com/karotysm/?hl=fr" >Instagram</a>
-           <a href="Ang_Projets.html" >Eng</a>
+           <p> Fr /<a href="Ang_Projets.html" > Eng</a></p>
         </div>
        
       </header>
@@ -33,7 +33,7 @@
       <div class="Projet">
         <div class="column">
           <div class="image-container">
-            <a href="PgEpo.html"><img src="DProjets/20240926171010.png" alt="Projet Magazine Epologia" class="icon"></a>
+            <a href="PgEpo.html"><img src="DProjets/20240926171010.jpg" alt="Projet Magazine Epologia" class="icon"></a>
             <div class="image-title">Revue EPOLOGIA</div>
           </div>
           <div class="image-container">
@@ -48,7 +48,7 @@
         
         <div class="column">
           <div class="image-container">
-            <a href="PgLivre.html"><img src="DProjets/Couv.png" alt="Projet Couverture de livre" class="icon"></a>
+            <a href="PgLivre.html"><img src="DProjets/Couv.jpg" alt="Projet Couverture de livre" class="icon"></a>
             <div class="image-title">Couvertures de livres</div>
           </div>
           <div class="image-container">
@@ -67,7 +67,7 @@
             <div class="image-title">MARK YOU WORDS</div>
           </div>
           <div class="image-container">
-            <a href="PgOuro.html"><img src="DProjets/OUROC copie.png" alt="Projet Specimen Ouroboros" class="icon"></a>
+            <a href="PgOuro.html"><img src="DProjets/OUROC copie.jpg" alt="Projet Specimen Ouroboros" class="icon"></a>
             <div class="image-title">Spécimen OUROBOROS</div>
           </div>
           <div class="image-container">
