--- a/Ang_PgLivre.html
+++ b/Ang_PgLivre.html
@@ -24,7 +24,7 @@
            <a href="Ang_Projets.html" >Projects</a>
            <a href="Ang_CV.html" >About me</a>
            <a href="https://www.instagram.com/karotysm/?hl=fr" >Instagram</a>
-           <a href="PgLivre.html" >Fr</a>
+           <p><a href="PgLivre.html" >Fr </a>/ Eng</p>
         </div>
        
       </header>
