--- a/PgTypo.html
+++ b/PgTypo.html
@@ -22,9 +22,9 @@
         </div>
         <div class="headerR">
            <a href="Projets.html" >Projets</a>
-           <a href="CV.html" >A propos</a>
+           <a href="CV.html" >À propos</a>
            <a href="https://www.instagram.com/karotysm/?hl=fr" >Instagram</a>
-           <a href="Ang_PgTypo.html" >Eng</a>
+           <p> Fr /<a href="Ang_PgTypo.html" >Eng </a></p>
         </div>
        
       </header>
