--- a/index.html
+++ b/index.html
@@ -14,21 +14,25 @@
 
 <body class="bodyguard">
   
+ 
 <header class="header1">
   <!-- Le lien de l'image sera modifié dynamiquement par JavaScript -->
   <a id="favicon-link" href="index.html">
-    <img src="IMG/FaviconR copie.png" width="110%" alt="Icon Tigre" class="logo">
+    <img src="IMG/FaviconR copie.png" width="100%" alt="Icon Tigre" class="logo">
   </a>
   
-  <img src="IMG/pseudo.png" width="70%" alt="pseudo">
+  <img src="IMG/pseudo.png" width="100%" alt="pseudo" class="pseudo">
 </header>
+
 
 <nav class="lien">
   <a href="Projets.html"><h2>Projets</h2></a>
-  <a href="CV.html"><h2>A propos</h2></a>
+  <a href="CV.html"><h2>À propos</h2></a>
   <a href="https://www.instagram.com/karotysm/?hl=fr"><h2>Instagram</h2></a>
   <a href="Ang_index.html" ><h2>Eng</h2></a>
 </nav>
+
+
 
 <script>
   // Fonction pour changer dynamiquement le lien de l'image
