--- a/Ang_PgEAP.html
+++ b/Ang_PgEAP.html
@@ -132,6 +132,7 @@
     
               </div>
  </div>
+</div>
 
  <footer class="footer">
   <p>Web design : &copy; Anne-Claire Michi, 2024 <br> Fonts : cofo-sans-pixel; Arial</p>
