--- a/Ang_PgLivre.html
+++ b/Ang_PgLivre.html
@@ -88,7 +88,7 @@
         
        
        <div class="Couv">
-        <img src="DCouv/Cover copie.png" alt="Proposition Couverture Howl Moving Castle" >
+        <img src="DCouv/Cover_copie.jpg" alt="Proposition Couverture Howl Moving Castle" >
         <div>
         <img src="DCouv/COVER2.jpg" alt="Proposition Couverture Howl moving castle patron">
         <p>Howl's Moving Castle Diana Wynne Jones</p>
@@ -97,7 +97,7 @@
        </div>
 
        <div class="Couv">
-        <img src="DCouv/Cover copie 2.png" alt="Proposition Couverture Pictures of Dorian Gray ">
+        <img src="DCouv/Cover_copie 2.jpg" alt="Proposition Couverture Pictures of Dorian Gray ">
         <div>
         <img src="DCouv/COVER.jpg" alt="Proposition Couverture Pictures of Dorian Gray patron">
         <p> The Pictures of Dorian Gray, Oscar Wilde</p>
@@ -105,7 +105,7 @@
        </div>
 
        <div class="Couv">
-        <img src="DCouv/Cover copie 3.png" alt="Proposition Couverture 1984 ">
+        <img src="DCouv/Cover_copie 3.jpg" alt="Proposition Couverture 1984 ">
         <div>
         <img src="DCouv/COVER3.jpg" alt="Proposition Couverture 1984 patron">
         <p>1984, Georges Orwell</p>
