--- a/PgDISP.html
+++ b/PgDISP.html
@@ -141,6 +141,7 @@
 <img src="DDISP/Rendu 1.1.jpg" alt="Proposition Couverture 1" class="DISP">
 <img src="DDISP/Rendu 1.12.jpg" alt="Proposition Couverture 2" class="DISP">
 </div>
+</div>
 
 </script>
 <footer class="footer">
