--- a/PgKorax.html
+++ b/PgKorax.html
@@ -90,7 +90,7 @@
         <div class="KORAX">
        
            
-            <div class="OURO">
+            <div class="KORAXX">
             <img src="DKorax/Poster Korax.jpg" alt="Poster Collection" >
             <img src="DKorax/Korax.gif" alt="Poster Collection" >
             </div>
