--- a/Ang_PgDISP.html
+++ b/Ang_PgDISP.html
@@ -139,6 +139,7 @@
 <img src="DDISP/Rendu 1.1.jpg" alt="Proposition Couverture 1" class="DISP">
 <img src="DDISP/Rendu 1.12.jpg" alt="Proposition Couverture 2" class="DISP">
 </div>
+</div>
 
 </script>
 
