--- a/Ang_PgEAP.html
+++ b/Ang_PgEAP.html
@@ -111,7 +111,7 @@
          </div>
 
          <div class="EAP2" >
-          <img class="EAPbis3" src="DEAP/Influence/REF.jpg" alt="Édition influence">
+          <img class="EAPbis3" src="DEAP/Influence/REF.png" alt="Édition influence">
           <img src="DEAP/Influence/P1 copie.jpg" alt="Page Influence Edagar Allan Poe">
           <img src="DEAP/Influence/P3 copie.jpg" alt="Page Influence Edagar Allan Poe">
           <img class="EAPbis3" src="DEAP/Influence/DSC08490.jpg" alt="Photo édition influence">
