--- a/PgAP.html
+++ b/PgAP.html
@@ -68,7 +68,7 @@
     <div class="leftC">
         <h2 class="h2in">Projet</h2>
             <h3>Art Press</h3>
-            <p> Un fanzine composé d’une série de collage réalisés sous trois jours. Le catalogue d’images utilisées a été extrait de différents magazines d’art.
+            <p> Un fanzine composé d’une série de collage réalisée sous trois jours. Le catalogue d’images utilisées a été extrait de différents magazines d’art.
 
               <h2 class="h2in">Description</h2>
               <p>Fanzine de format A5 (fermé)</p>           
