--- a/PgEpo.html
+++ b/PgEpo.html
@@ -68,7 +68,7 @@
     <div class="leftC">
         <h2 class="h2in">Projet</h2>
         <h3>Epologia</h3>
-        <p> Le projet Epologia repose sur l’idée de créer un magazine destiné à vulgariser la science pour un large public. Afin de faciliter l’apprentissage des lecteurs et de capter leur attention, la revue mise sur l’image, dont la majorité ont été conçues spécialement pour ce projet, ainsi que sur un vocabulaire graphique prédominant, stimulant et accrocheur. <br> L’objectif est de proposer un objet que le lecteur ait envie de parcourir et de découvrir, autant pour son esthétique que pour richesse son contenu.
+        <p> Le projet Epologia repose sur l’idée de créer un magazine destiné à vulgariser la science pour un large public. Afin de faciliter l’apprentissage des lecteurs et de capter leur attention, la revue mise sur l’image, dont la majorité a été conçue spécialement pour ce projet, ainsi que sur un vocabulaire graphique prédominant, stimulant et accrocheur. <br> L’objectif est de proposer un objet que le lecteur ait envie de parcourir et de découvrir, autant pour son esthétique que pour richesse son contenu.
         </p>
 
       <h2 class="h2in">Description</h2>
