--- a/PgLivre.html
+++ b/PgLivre.html
@@ -68,7 +68,7 @@
     <div class="leftC">
         <h2 class="h2in">Projet</h2>
         <h3>Couvertures de livres</h3>
-        <p> Projet de création de trois propositions de couvertures de livres sous formes de jaquettes. Les livres traités sont “Howl's Moving Castle de Diana Wynne Jones, “The Pictures of Dorian Grar d'Oscar Wilde et “1984“ de Georges Orwell.  </p>
+        <p> Projet de création de trois propositions de couvertures de livres sous formes de jaquettes. Les livres traités sont “Howl's Moving Castle de Diana Wynne Jones, “The Pictures of Dorian Gray d'Oscar Wilde et “1984“ de Georges Orwell.  </p>
 
 
         <h2 class="h2in">Description</h2>
